--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -84,7 +84,11 @@
                                     {{ unit }}
                                 </h3>
                             </div>
-                            <button type="submit" class="mercadopago-button" formmethod="post">Pagar</button>
+                            <a href="{{init_point}}">Comprar con redireccionamiento</a>
+                            <script
+                                src="https://www.mercadopago.com.pe/integrations/v1/web-payment-checkout.js"
+                                data-preference-id='{{id}}'>
+                            </script>
                         </div>
                     </div>
                 </div>
@@ -92,4 +96,5 @@
         </div>
     </div>
 </div>
+<script src="https://www.mercadopago.com/v2/security.js" view="item"></script>
    
