fin de pasarela

--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -87,7 +87,11 @@
                             <a href="{{init_point}}">Comprar con redireccionamiento</a>
                             <script
                                 src="https://www.mercadopago.com.pe/integrations/v1/web-payment-checkout.js"
-                                data-preference-id='{{id}}'>
+                                data-preference-id='{{id}}'
+                                data-button-label = "Comprar con modal( no funciona el redirect)"
+                                data-elements-color= "#8e44ad"
+
+                                >
                             </script>
                         </div>
                     </div>
